force-app/main/default/objects/Scheme__c/fields/Buy_Product__c.field-meta.xml
<CustomField>
    <fullName>Buy_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buy Product</label>
    <referenceTo>Buy_Product__c</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes1</relationshipName>
    <type>Lookup</type>
</CustomField>