force-app/main/default/objects/Scheme__c/fields/Credit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Credit_Percentage__c</fullName>
    <label>Credit Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>