force-app/main/default/objects/Scheme__c/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mapping</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>