force-app/main/default/objects/Scheme__c/fields/Scheme_Eligibility_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Eligibility_Percentage__c</fullName>
    <label>Scheme Eligibility Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>