force-app/main/default/objects/Scheme__c/fields/Scheme_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheme_End_Date__c</fullName>
    <label>Scheme End Date</label>
    <type>Date</type>
</CustomField>