force-app/main/default/objects/Scheme__c/fields/Scheme_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Frequency__c</fullName>
    <label>Scheme Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>