force-app/main/default/objects/Scheme__c/fields/Scheme_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Start_Date__c</fullName>
    <label>Scheme Start Date</label>
    <type>Date</type>
</CustomField>