force-app/main/default/objects/Scheme__c/fields/Scheme_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Type__c</fullName>
    <label>Scheme Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Category Sales</fullName>
                <isActive>false</isActive>
                <label>Category Sales</label>
            </value>
            <value>
                <fullName>Collection</fullName>
                <isActive>false</isActive>
                <label>Collection</label>
            </value>
            <value>
                <fullName>Product Sales</fullName>
                <isActive>false</isActive>
                <label>Product Sales</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <isActive>false</isActive>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>