force-app/main/default/objects/Scheme__c/fields/Target_Logic__c.field-meta.xml
<CustomField>
    <fullName>Target_Logic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Logic</label>
    <referenceTo>Target_Logic__c</referenceTo>
    <relationshipLabel>Schemes</relationshipLabel>
    <relationshipName>Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>